fix google chrome bug on ie

--- a/eloue/media/css/custom.css
+++ b/eloue/media/css/custom.css
@@ -453,7 +453,7 @@
 				width: 70px;
 				height: 10px;
 				font-size: 12px;
-				margin: 5px 10px 5px 10px;
+				margin: 3px 10px 5px 10px;
 			}
 				
 
